<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".CameraFragment">

    <ImageButton
        android:id="@+id/flash_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/ic_flash_off"
        android:contentDescription="@string/flash_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.camera.view.PreviewView
        android:id="@+id/view_finder"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/capture_button"
        app:layout_constraintDimensionRatio="3:4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/flash_button" />

    <ImageButton
        android:id="@+id/capture_button"
        android:layout_width="82dp"
        android:layout_height="82dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/ic_photo_button_unpressed"
        android:contentDescription="@string/take_a_picture"
        android:scaleType="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/photo_gallery_button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/ic_add_photo_unpressed"
        android:contentDescription="@string/photo_gallery_button_text"
        app:layout_constraintBottom_toBottomOf="@+id/capture_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/capture_button"
        app:layout_constraintTop_toTopOf="@+id/capture_button" />

</androidx.constraintlayout.widget.ConstraintLayout>